feat: Expo 54 upgrade, WebView removal, and backend enhancements
- Upgraded project to Expo 51 (compatible with Expo 54)
- Updated React Native to 0.74.5 for stability
- Removed WebView dependencies and related code
- Fixed StatusBar usage across all screens
- Added Product Variations API endpoints
- Added Referral System with database schema
- Enhanced backend with missing endpoints
- Improved error handling and logging
- Updated package versions for compatibility
- Cleaned up console warnings while keeping error logs

--- a/admin-panel/campaign-management.html
+++ b/admin-panel/campaign-management.html
@@ -337,9 +337,14 @@
         <div class="campaign-container">
             <div class="campaign-header">
                 <h1>🎪 Kampanya Yönetimi</h1>
-                <button class="btn btn-primary" onclick="openCreateCampaignModal()">
-                    + Yeni Kampanya
-                </button>
+                <div class="campaign-actions">
+                    <button class="btn btn-primary" onclick="openCreateCampaignModal()">
+                        + Yeni Kampanya
+                    </button>
+                    <button class="btn btn-success" onclick="createWeeklyFlashDeal()" style="margin-left: 8px;">
+                        ⚡ Haftalık Flash İndirim
+                    </button>
+                </div>
             </div>
 
             <!-- Metrics Dashboard -->
